--- a/src/Components/HomeC/Home.css
+++ b/src/Components/HomeC/Home.css
@@ -109,29 +109,38 @@ width: 200px;
 }
 .home > .home2 > ul > li{}
 .home > .home2 > ul > li.h1{
-    /* text-decoration: underline; */
-    text-decoration-line: underline;
+    /* text-decoration-line: underline; */
+    
     font-weight: 400;
-    line-height: 40px;
+    /* line-height: 100px; */
+    width: fit-content; 
+    border-bottom-style: solid;
+    border-width: 1px;
+    border-color: rgb(169, 169, 169);
+    padding-bottom: 3px;
 }
-.home > .home2 > ul > li.btn  > div{
+
+
+.NavLink{
     width: fit-content;
-    background-color: whitesmoke;
+    text-decoration: none; 
+    color : black;
+    background-color: rgb(222, 221, 221);
     padding: 7px 10px 10px 10px;
     border-radius: 8px;
     font-size: 15px;
-    /* background-color: blue; */
-    /* box-shadow: 10px 10px 40px -20px rgba(0, 0, 0, 0.25); */
     cursor: pointer;
     box-shadow: 10px 10px 20px -10px rgba(0, 0, 0, 0.25);
 }
 
-.home > .home2 > ul > li.btn  > div:hover{
-    background-color: rgb(109, 107, 107);
+.NavLink:hover{
+    background-color: rgb(159, 158, 158);
     color:white;
     font-size: 16px;
     padding: 8px 11px 11px 11px;
 }
+
+
 
 
 .home > .home2 > ul > li > ul{
@@ -146,7 +155,6 @@ width: 200px;
 }
 .home > .home2 > ul > li > ul > li{
  
-    
 }
 .home > .home2 > ul > li > ul > li > img{
     width: 30px;
