--- a/src/Components/ContactC/Contact.css
+++ b/src/Components/ContactC/Contact.css
@@ -36,7 +36,7 @@
     background-color: rgb(250, 250, 250);
     padding: 70px;
     box-shadow: 10px 10px 30px -15px rgba(0, 0, 0, 0.25);
-
+   
 }
 .contact > ul > li > ul > li {}
 .contact > ul > li > ul > li > ul  {
@@ -91,4 +91,125 @@
     border-bottom-style: solid;
     border-bottom-width: 1px;
     padding-bottom: 2px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:800px) {
+
+
+    .contact {
+        padding-top: 150px;
+        display: grid;
+        place-items: center;
+    }
+    .contact > ul {
+        padding: 0; 
+        margin: 0 ; 
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 70px;
+    }
+    .contact > ul > li {}
+    .contact > ul > li.h1 {
+        display: grid;
+        justify-content: center;
+        letter-spacing: 3px;
+    
+    }
+    .contact > ul > li.h1 > div{
+        font-size: 25px ;
+        font-weight: 600;
+        width: fit-content;
+        border-bottom-style:solid;
+        border-bottom-width: 2px;
+        padding: 0px 0px 1px 0px;
+    }
+    .contact > ul > li > ul {
+        padding: 0; 
+        margin: 0 ; 
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        background-color: rgb(250, 250, 250);
+        padding: 20px;
+        box-shadow: 10px 10px 30px -15px rgba(0, 0, 0, 0.25);
+        font-size:20px;
+    }
+    .contact > ul > li > ul > li {}
+    .contact > ul > li > ul > li > ul  {
+        padding: 0; 
+        margin: 0 ; 
+        list-style: none;
+        display: grid;
+        grid-template-columns: 1.4fr 2fr ;
+        gap: 50px;
+    }
+    .contact > ul > li >ul > li >  ul > li {
+    }
+    .contact > ul > li >ul > li >  ul > li.txt > div {
+        width: fit-content;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+        padding-bottom: 2px;
+    
+    }
+    
+    .contact > ul > li >ul > li >  ul > li.txt > div > img{
+        width: 19px;
+        position: relative;
+        top: 2px;
+        left: 5px;
+    }
+    
+    .contact > ul > li >ul > li >  ul > li > div {}
+    .contact > ul > li > ul > li > ul > li.ima > img{
+        width: 30px;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+        padding-bottom: 2px;
+    }
+    .contact > ul > li > ul > li >  ul > li.ima > div{
+        display: flex;
+        gap: 20px;
+        width: fit-content;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+        padding-bottom: 2px;
+    }
+    .contact > ul > li > ul > li >  ul > li.ima > div > img{
+        width: 30px;
+    }
+    .contact > ul > li > ul > li >  ul > li > ul  {
+        padding: 0; 
+        margin: 0; 
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .contact > ul > li > ul > li > ul > li > ul > li {
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+        padding-bottom: 2px;
+    }
+    
+    
+    
+    
+       
+    
 }
