--- a/src/Components/HomeC/Home.css
+++ b/src/Components/HomeC/Home.css
@@ -172,3 +172,210 @@ width: 200px;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:800px) {
+   
+    
+    .home {
+      width: 100%;
+      padding-top: 140px;
+      display: grid;
+        place-items: center; 
+    }
+    .home > .home1{
+        width: 90%;
+        display: grid;
+        place-items: center;  
+    
+       
+    }
+    .home > .home1 > ul {
+        
+        margin: 0; 
+        padding: 0; 
+        list-style: none;
+        display:flex; 
+        flex-direction:column-reverse; 
+        gap: 30px;
+        
+        
+    }
+    .home > .home1 > ul > li{
+        display: grid ; 
+        place-items: center;
+    }
+    .home > .home1 > ul > li.profile {
+        display: grid ; 
+        place-items: center; 
+    }
+    .home > .home1 > ul > li.profile > img {
+    width: 250px;
+    }
+    .home > .home1 > ul > li > ul {
+        margin: 0; 
+        padding: 0; 
+        list-style: none;
+        display:flex; 
+        flex-direction:column;
+        gap: 10px;
+    }
+    .home > .home1 > ul > li > ul > li {}
+    .home > .home1 > ul > li > ul > li.h1 {
+        font-weight: 700; 
+        font-size: 25px;
+        /* max-width: 500px; */
+    }
+    
+    .home > .home1 > ul > li > ul > li.txt {
+        /* max-width: 400px; */
+        /* background-color: blue;  */
+    }
+    .home > .home1 > ul > li > ul > li.txt >  span{
+        font-weight: 630; 
+        font-size: 21px;
+    }
+    .home > .home1 > ul > li > ul > li.git_ln {
+        display: flex;  
+        gap: 20px; 
+        margin: 20px 0px 0px 0px ; 
+    }
+    .home > .home1 > ul > li > ul > li.git_ln > img{
+    
+        width: 30px ; 
+        height: 50px; 
+    }
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    .home > .home2 {
+        width: 90%; 
+        display: grid;
+        place-items: center; 
+        margin-top:40px;
+        padding-bottom: 200px;
+    }
+    .home > .home2 > ul{
+        margin: 0; 
+        padding: 0; 
+        list-style: none;
+        min-width: 200px;
+        display: flex; 
+        flex-direction: column;
+        gap: 20px; 
+    }
+    .home > .home2 > ul > li{}
+    .home > .home2 > ul > li.h1{
+        /* text-decoration-line: underline; */
+        
+        font-weight: 400;
+        /* line-height: 100px; */
+        width: fit-content; 
+        border-bottom-style: solid;
+        border-width: 1px;
+        border-color: rgb(169, 169, 169);
+        padding-bottom: 3px;
+    }
+    
+    
+    .NavLink{
+        width: fit-content;
+        text-decoration: none; 
+        color : black;
+        background-color: rgb(222, 221, 221);
+        padding: 7px 10px 10px 10px;
+        border-radius: 8px;
+        font-size: 15px;
+        cursor: pointer;
+        box-shadow: 10px 10px 20px -10px rgba(0, 0, 0, 0.25);
+    }
+    
+    .NavLink:hover{
+        background-color: rgb(159, 158, 158);
+        color:white;
+        font-size: 16px;
+        padding: 8px 11px 11px 11px;
+    }
+    
+    
+    
+    
+    .home > .home2 > ul > li > ul{
+        margin: 0; 
+        padding: 0; 
+        list-style: none;
+       display: flex;
+       gap: 20px;
+       max-width: 400px;
+       flex-wrap: wrap;
+        
+    }
+    .home > .home2 > ul > li > ul > li{
+     
+    }
+    .home > .home2 > ul > li > ul > li > img{
+        width: 30px;
+    }
+    
+    
+}
+
+
+
