--- a/src/Components/NavC/Nav.css
+++ b/src/Components/NavC/Nav.css
@@ -1,32 +1,162 @@
 .nav{
     height: 90px;
     width: 100%;
-    background-color: white;
+    background-color: var(--navBackground);
     position: fixed;
     display: grid;
     place-items: center;
-    box-shadow: 10px 10px 40px -20px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--boxShadowNav);
 }
-.nav > ul {
+
+.mobileNav{
+    display: none;
+}
+
+
+.nav > ul  {
+    width: 95%;
     padding: 0;
     margin: 0;
     list-style: none;
     display: flex;
-    gap: 70px ;
+    justify-content: space-between;
+    
 }
-.nav > ul  li {
+
+.nav > ul > li {
     font-size: 20px;
     font-weight: 600;
 }
 
-.nav > ul > li > Link{
-    text-decoration: none;
+.nav > ul > li.navlist{}
+.nav > ul > li.hamberger{
+    display: none;
+}
+.nav > ul > li.navlist > ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap:80px; 
+}
+.nav > ul > li.navlist > ul > li {}
+.nav > ul > li.light_dark{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.light_dark > .text {
+    font-size: 12px;
+    font-weight: 100;
+    color: rgb(105, 105, 105);
+
+}
+
+.l_p{
+    height: auto;
+    width: 40px;
+    background-color: rgb(244, 244, 244);
+    padding: 1px;
+    border-radius: 1000px;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: rgb(243, 243, 243);
+}
+.l_p  > .c {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: rgb(155, 154, 154);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 15px;
+    padding: 2px;
 }
 
 
 
 
 
+/* .l_p  > .c:hover{
+  transform: translateX(100%);
+} */
+
+
+@media screen and (max-width:1200px){
+
+    .nav > ul > li.navlist > ul {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        display: flex;
+        gap:50px; 
+    }
+
+
+}
+
+
+
+@media screen and (max-width:800px){
+    .nav{
+        /* padding: 0px 20px 0px 20px ; */
+    }
+    .nav > ul {
+        width: 90%;
+    }
+    .nav > ul > li.navlist{
+        display: none;
+    }
+.nav > ul > li.hamberger{
+    display: block;
+    font-size:30px;
+  
+}
+
+.light_dark {
+    
+}
+
+
+.mobileNav{
+    display: block;
+    position: fixed;
+    top: 90px;
+    /* background-color: rgb(147, 145, 145); */
+    background-color: white;
+    width: fit-content;
+    /* padding: 20px 90px 20px 20px; */
+    padding: 10px;
+    box-shadow: 10px 10px 20px -10px rgba(0, 0, 0, 0.25);
+
+}
+
+.mobileNav > ul {
+    padding: 0;
+     margin: 0 ; 
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 240px;
+    justify-content: center;
+    align-items: center;
+}
+
+.mobileNav > ul > li {
+    border-bottom-style: solid;
+    border-width: 1px;
+    text-align: center;
+    border-color: rgb(205, 203, 203);
+    padding-bottom: 3px;
+    width: 90%;
+}
+
+}
 
 
 
