--- a/src/Components/NavC/Nav.css
+++ b/src/Components/NavC/Nav.css
@@ -1,4 +1,5 @@
 .nav{
+    color:var(--navTextColor);
     height: 90px;
     width: 100%;
     background-color: var(--navBackground);
@@ -50,29 +51,29 @@
 .light_dark > .text {
     font-size: 12px;
     font-weight: 100;
-    color: rgb(105, 105, 105);
+    /* color: rgb(105, 105, 105); */
 
 }
 
 .l_p{
     height: auto;
     width: 40px;
-    background-color: rgb(244, 244, 244);
+    background-color: var(--toggle_dark_light_mode_P_background);
     padding: 1px;
     border-radius: 1000px;
     border-style: solid;
     border-width: 0.5px;
-    border-color: rgb(243, 243, 243);
+    border-color: var(--toggle_dark_light_mode_P_border);
 }
 .l_p  > .c {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    background-color: rgb(155, 154, 154);
+    background-color:var(--toggle_dark_light_mode_C_background);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: var(--navBackground);
     font-size: 15px;
     padding: 2px;
 }
@@ -114,6 +115,7 @@
 .nav > ul > li.hamberger{
     display: block;
     font-size:30px;
+    color:var(--navTextColor);
   
 }
 
@@ -126,13 +128,10 @@
     display: block;
     position: fixed;
     top: 90px;
-    /* background-color: rgb(147, 145, 145); */
-    background-color: white;
+    background-color: var(--navBackground);
     width: fit-content;
-    /* padding: 20px 90px 20px 20px; */
     padding: 10px;
-    box-shadow: 10px 10px 20px -10px rgba(0, 0, 0, 0.25);
-
+    box-shadow: var(--navShadow);
 }
 
 .mobileNav > ul {
@@ -151,7 +150,7 @@
     border-bottom-style: solid;
     border-width: 1px;
     text-align: center;
-    border-color: rgb(205, 203, 203);
+    border-color:var(--navItemLineColor);
     padding-bottom: 3px;
     width: 90%;
 }
@@ -161,4 +160,25 @@
 
 
 
+@media screen and (max-width:500px) {
+    .nav{
+        height: 70px; 
+    }
 
+    .mobileNav{
+    display: block;
+    position: fixed;
+    top: 70px;
+    background-color: var(--navBackground);
+    width: fit-content;
+    padding: 10px;
+    box-shadow: var(--navShadow);
+}
+
+
+.nav > ul > li.hamberger{
+    display: block;
+    font-size:23px;
+    color:var(--navTextColor);
+}
+}
