--- a/src/Components/ProjectC/Project.css
+++ b/src/Components/ProjectC/Project.css
@@ -1,6 +1,8 @@
 
 
 .project {
+    background-color: var(--navBackground); 
+    color: var(--navTextColor);
     display: grid;
     place-items: center;
     width: 100%;
@@ -13,7 +15,7 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 130px;
+    gap: 110px;
     width: 99%;
 }
 .project > ul > li.pID{}
@@ -37,9 +39,9 @@
     font-size: 35px;
     font-weight: 600;
     letter-spacing: 8px;
-    border-bottom-style: solid ;
+    /* border-bottom-style: solid ;
     border-bottom-width: 1px ;
-    padding-bottom: 5px;
+    padding-bottom: 5px; */
 
 }
 .project > ul > li.pID > ul > li > ul {
@@ -93,7 +95,7 @@
     padding: 20px 10px 20px 10px;
     gap: 15px;
     border-radius: 20px;
-    box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: var(--project_single_background_Shadow);
     max-width: 300px;
     
 }
@@ -111,13 +113,35 @@
 .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.ima{}
 .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.ima > img{}
 .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.btn > div{
-    color: white;
+    color: var(--project_link_btn_color);
     font-size:15px;
    width: fit-content;
    padding: 5px 10px 5px 10px;
-   background-color: rgb(85, 83, 83);
+   background-color:var(--project_link_btn_background);
    border-radius: 8px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -143,10 +167,12 @@
 
 
     .project {
+        background-color: var(--navBackground); 
+        color: var(--navTextColor);
         display: grid;
         place-items: center;
         width: 100%;
-        padding-top: 200px;
+        padding-top: 130px;
         padding-bottom: 100px;
     }
     .project > ul{
@@ -155,7 +181,7 @@
         list-style: none;
         display: flex;
         flex-direction: column;
-        gap: 100px;
+        gap: 70px;
         width: 90%;
     }
     .project > ul > li.pID{
@@ -186,9 +212,9 @@
         font-size: 23px;
         font-weight: 600;
         letter-spacing: 8px;
-        border-bottom-style: solid ;
+        /* border-bottom-style: solid ;
         border-bottom-width: 1px ;
-        padding-bottom: 5px;
+        padding-bottom: 5px; */
     
     }
     .project > ul > li.pID > ul > li > ul {
@@ -221,7 +247,6 @@
     }
     .project > ul > li.pID > ul > li > ul > li > ul > li{}
     .project > ul > li.pID > ul > li > ul > li > ul > li.h1{
-    
       display: flex;
       flex-direction: row;
       gap: 10px;
@@ -238,11 +263,11 @@
         list-style: none;
         display: grid;
         place-items: center;
-        /* background-color: blue; */
+        background-color: var(--project_single_background);
         padding: 20px 10px 20px 10px;
         gap: 15px;
         border-radius: 20px;
-        box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, 0.25);
+        box-shadow: var(--project_single_background_Shadow);
         max-width: 300px;
         
     }
@@ -260,11 +285,11 @@
     .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.ima{}
     .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.ima > img{}
     .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.btn > div{
-        color: white;
+        color: var(--project_link_btn_color);
         font-size:15px;
        width: fit-content;
        padding: 5px 10px 5px 10px;
-       background-color: rgb(85, 83, 83);
+       background-color:var(--project_link_btn_background);
        border-radius: 8px;
     }
     
@@ -281,6 +306,63 @@
 
 
 
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:450px) {
+
+    .project > ul > li.pID > ul > li.type > div{
+        width: fit-content;
+        font-size: 17px;
+        font-weight: 600;
+        letter-spacing: 8px;
+        /* border-bottom-style: solid ;
+        border-bottom-width: 1px ;
+        padding-bottom: 5px; */
+    
+    }
+
+
+    .project > ul > li.pID > ul > li > ul > li > ul > li.h1{
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        justify-content: center;
+        font-size: 15px;
+      }
+      .project > ul > li.pID > ul > li > ul > li > ul > li.h1 > img{
+          width: 15px;
+          /* height: 30px; */
+      }
+
+
+    .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.txt{
+        width: 90%;
+        word-wrap: break-word;
+        font-size:11px;
+        text-align: center;
+        word-spacing: 1.5px;
+        line-height: 15px;
+    
+    }
+
+
+
+    .project > ul > li.pID > ul > li > ul > li > ul > li.proj > ul > li.btn > div{
+        color: var(--project_link_btn_color);
+        font-size:11px;
+       width: fit-content;
+       padding: 5px 10px 5px 10px;
+       background-color:var(--project_link_btn_background);
+       border-radius: 8px;
+    }
+}
 
 
 
