--- a/src/Components/ContactC/Contact.css
+++ b/src/Components/ContactC/Contact.css
@@ -1,9 +1,17 @@
-.contact {
+
+.contact_parent {
     height:var(--bodyHeight);
+    background-color: var(--bodyBackground); 
+}
+
+.contact {
+    /* height:var(--bodyHeight); */
+    height:auto;
     background-color: var(--bodyBackground); 
     color: var(--navTextColor);
     
-    /* padding-top: 120px; */
+    padding-top: 120px;
+    padding-bottom: 50px;
     display: grid;
     place-items: center;
 }
@@ -14,6 +22,7 @@
     display: flex;
     flex-direction: column;
     gap: 70px;
+    background-color: var(--bodyBackground); 
 }
 .contact > ul > li {}
 .contact > ul > li.h1 {
@@ -114,16 +123,28 @@
 
 @media screen and (max-width:800px) {
 
+    .contact_parent {
+        /* height:var(--bodyHeight); */
+        height:var(--bodyHeight);
+        background-color: var(--bodyBackground);
+        overflow-y: scroll; 
+    
+    }
 
     .contact {
         background-color: var(--bodyBackground); 
         color: var(--navTextColor);
-        height: var(--bodyHeight);
-        padding-top: 0px;
+        height:auto;
+      
+        /* padding-top: 120px;  */
+         /* padding-bottom: 100px; */
         display: grid;
         place-items: center;
+        /* overflow-y: scroll; */
     }
     .contact > ul {
+        padding-bottom: 100px;
+        background-color: var(--bodyBackground); 
         padding: 0; 
         margin: 0 ; 
         list-style: none;
