--- a/src/Components/AboutC/About.css
+++ b/src/Components/AboutC/About.css
@@ -20,7 +20,7 @@
     list-style: none;
     background-color: var(--bodyBackground);
     display: flex;
-    gap: 100px; 
+    gap: 60px; 
     max-width:80%;
 
 }
@@ -28,13 +28,15 @@
     background-color: var(--bodyBackground);
 }
 .aboutin > ul.intro > li.img{
-    background-color: var(--bodyBackground);
+    /* background-color: var(--bodyBackground);
     display: flex; 
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 .aboutin > ul.intro > li.img > img{
-    width: 270px;
+   
+    width: 230px;
+    height: 300px;
 }
 .aboutin > ul.intro > li > ul{
     padding: 0;
@@ -118,7 +120,7 @@
     gap: 10px;
     border-style: solid;
     border-width: 1px;
-    max-width:770px;
+    max-width:710px;
     padding: 15px;
   border-radius: 10px;
 
