--- a/src/Components/ContactC/Contact.css
+++ b/src/Components/ContactC/Contact.css
@@ -77,7 +77,7 @@
 }
 
 .contact > ul > li >ul > li >  ul > li > div {}
-.contact > ul > li > ul > li > ul > li.ima > img{
+.contact > ul > li > ul > li > ul > li.ima > a > img{
     width: 30px;
     border-bottom-style: solid;
     border-bottom-width: 1px;
@@ -93,7 +93,7 @@
     border-color: var(--navTextColor);
     padding-bottom: 2px;
 }
-.contact > ul > li > ul > li >  ul > li.ima > div > img{
+.contact > ul > li > ul > li >  ul > li.ima > div > a >  img{
     width: 30px;
 }
 .contact > ul > li > ul > li >  ul > li > ul  {
@@ -205,7 +205,7 @@
      }
     
     .contact > ul > li >ul > li >  ul > li > div {}
-    .contact > ul > li > ul > li > ul > li.ima > img{
+    .contact > ul > li > ul > li > ul > li.ima  > a > img{
         width: 30px;
         border-bottom-style: solid;
         border-bottom-width: 1px;
@@ -220,7 +220,7 @@
         border-bottom-width: 1px;
         padding-bottom: 2px;
     }
-    .contact > ul > li > ul > li >  ul > li.ima > div > img{
+    .contact > ul > li > ul > li >  ul > li.ima > div > a >  img{
         width: 30px;
     }
     .contact > ul > li > ul > li >  ul > li > ul  {
