--- a/src/Components/HomeC/Home.css
+++ b/src/Components/HomeC/Home.css
@@ -34,7 +34,7 @@ height: var(--bodyHeight);
     list-style: none;
     display:flex; 
     flex-direction:row; 
-    gap: 100px;
+    gap: 60px;
     
     
 }
@@ -43,11 +43,19 @@ height: var(--bodyHeight);
     place-items: center;
 }
 .home > .home1 > ul > li.profile {
+
     display: grid ; 
     place-items: center; 
 }
+
+/* .home > .home1 > ul > li.profile > div {
+    border-radius: 30%;
+    width: 300px;
+  
+} */
 .home > .home1 > ul > li.profile > img {
-width: 200px;
+    border-radius: 6%;
+    width: 240px;
 }
 .home > .home1 > ul > li > ul {
     margin: 0; 
@@ -78,6 +86,11 @@ width: 200px;
     margin: 20px 0px 0px 0px ; 
     font-size: 27px;
     
+}
+
+.home > .home1 > ul > li > ul > li.git_ln > a { 
+  text-decoration: none;
+  color: var(--navTextColor);
 }
 
 
